Elimination of unnecessary unpacking of all data